<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddKegiatanActivity"
    android:orientation="vertical"
    android:padding="18dp">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_skp"
        android:textColor="@color/softblack"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_marginTop="-14dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/silahkan_isi_form_dibawah_dengan_benar"
        android:textColor="@color/grey_200"
        android:textSize="15sp"
        android:textStyle="bold"
        android:alpha="0.5"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNamaKegiatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/masukan_nama_kegiatanmu">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/namaKegiatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPosisi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/posisi_kegiatanmu_sebagai_apa"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/posisiKegiatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/berapa_jumlah_poin_kegiatan"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/jumlahSKP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/status_kegiatanmu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/statusKepanitiaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Submit"/>
</LinearLayout>