<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailKegiatanActivity"
    android:orientation="vertical"
    android:padding="18dp">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ubah_kegiatan_yang_sudah_kamu_buat_sebelumnya"
        android:textColor="@color/softblack"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_marginTop="-14dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/silahkan_isi_form_dibawah_dengan_benar"
        android:textColor="@color/grey_200"
        android:textSize="15sp"
        android:textStyle="bold"
        android:alpha="0.5"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEditNamaKegiatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/masukan_nama_kegiatanmu">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNamaKegiatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEditPosisi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/posisi_kegiatanmu_sebagai_apa"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPosisiKegiatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEditPoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/berapa_jumlah_poin_kegiatan"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editJumlahSKP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEditStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/status_kegiatanmu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/editStatusKepanitiaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/edit"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginRight="5dp"
            android:text="Edit"/>
        <Button
            android:id="@+id/delete"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:backgroundTint="@color/red_danger"
            android:text="Delete"/>
    </LinearLayout>

</LinearLayout>